load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hivechain_lib",
    srcs = [
        "generate.go",
        "main.go",
    ],
    importpath = "github.com/Taranpreet26311/hive/cmd/hivechain",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//common/hexutil:go_default_library",
        "@com_github_ethereum_go_ethereum//consensus:go_default_library",
        "@com_github_ethereum_go_ethereum//consensus/beacon:go_default_library",
        "@com_github_ethereum_go_ethereum//consensus/ethash:go_default_library",
        "@com_github_ethereum_go_ethereum//core:go_default_library",
        "@com_github_ethereum_go_ethereum//core/rawdb:go_default_library",
        "@com_github_ethereum_go_ethereum//core/state:go_default_library",
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
        "@com_github_ethereum_go_ethereum//core/vm:go_default_library",
        "@com_github_ethereum_go_ethereum//crypto:go_default_library",
        "@com_github_ethereum_go_ethereum//log:go_default_library",
        "@com_github_ethereum_go_ethereum//params:go_default_library",
        "@com_github_ethereum_go_ethereum//rlp:go_default_library",
    ],
)

go_binary(
    name = "hivechain",
    embed = [":hivechain_lib"],
    visibility = ["//visibility:public"],
)
