load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "fakes",
    srcs = [
        "builder.go",
        "container.go",
    ],
    importpath = "github.com/Taranpreet26311/hive/internal/fakes",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_ethereum_hive//internal/libhive:go_default_library"],
)
