load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "devp2p_lib",
    srcs = ["main.go"],
    importpath = "github.com/Taranpreet26311/hive/simulators/devp2p",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_ethereum_hive//hivesim:go_default_library",
        "@com_github_shogo82148_go_tap//:go_default_library",
    ],
)

go_binary(
    name = "devp2p",
    embed = [":devp2p_lib"],
    visibility = ["//visibility:public"],
)
