load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "withdrawals_lib",
    srcs = [
        "helper.go",
        "main.go",
        "scenarios.go",
        "specs.go",
    ],
    importpath = "github.com/Taranpreet26311/hive/simulators/eth2/withdrawals",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_ethereum_go_ethereum//beacon/engine:go_default_library",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//core:go_default_library",
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
        "@com_github_ethereum_go_ethereum//crypto:go_default_library",
        "@com_github_ethereum_go_ethereum//params:go_default_library",
        "@com_github_ethereum_hive//hivesim:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//builder/mock:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//clients:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//config/consensus:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//config/execution:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//spoofing/beacon:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//testnet:go_default_library",
        "@com_github_protolambda_bls12_381_util//:go_default_library",
        "@com_github_protolambda_eth2api//:go_default_library",
        "@com_github_protolambda_zrnt//eth2/beacon/common:go_default_library",
        "@com_github_protolambda_ztyp//tree:go_default_library",
    ],
)

go_binary(
    name = "withdrawals",
    embed = [":withdrawals_lib"],
    visibility = ["//visibility:public"],
)
