load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "graphql_lib",
    srcs = ["graphql.go"],
    importpath = "github.com/Taranpreet26311/hive/simulators/ethereum/graphql",
    visibility = ["//visibility:private"],
    deps = ["@com_github_ethereum_hive//hivesim:go_default_library"],
)

go_binary(
    name = "graphql",
    embed = [":graphql_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "graphql_test",
    srcs = ["graphql_test.go"],
    embed = [":graphql_lib"],
    deps = ["@com_github_ethereum_hive//hivesim:go_default_library"],
)
