load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sync_lib",
    srcs = ["sync.go"],
    importpath = "github.com/Taranpreet26311/hive/simulators/ethereum/sync",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
        "@com_github_ethereum_go_ethereum//ethclient:go_default_library",
        "@com_github_ethereum_hive//hivesim:go_default_library",
    ],
)

go_binary(
    name = "sync",
    embed = [":sync_lib"],
    visibility = ["//visibility:public"],
)
