load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "clique_lib",
    srcs = ["clique.go"],
    importpath = "github.com/Taranpreet26311/hive/simulators/smoke/clique",
    visibility = ["//visibility:private"],
    deps = ["@com_github_ethereum_hive//hivesim:go_default_library"],
)

go_binary(
    name = "clique",
    embed = [":clique_lib"],
    visibility = ["//visibility:public"],
)
