load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "genesis_lib",
    srcs = ["main.go"],
    importpath = "github.com/Taranpreet26311/hive/simulators/smoke/genesis",
    visibility = ["//visibility:private"],
    deps = ["@com_github_ethereum_hive//hivesim:go_default_library"],
)

go_binary(
    name = "genesis",
    embed = [":genesis_lib"],
    visibility = ["//visibility:public"],
)
