load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "network_lib",
    srcs = ["network.go"],
    importpath = "github.com/Taranpreet26311/hive/simulators/smoke/network",
    visibility = ["//visibility:private"],
    deps = ["@com_github_ethereum_hive//hivesim:go_default_library"],
)

go_binary(
    name = "network",
    embed = [":network_lib"],
    visibility = ["//visibility:public"],
)
