load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "chain_generators",
    srcs = ["main.go"],
    importpath = "github.com/Taranpreet26311/hive/simulators/eth2/common/chain_generators",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//config/execution:go_default_library",
    ],
)
