load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "clients",
    srcs = [
        "beacon.go",
        "execution.go",
        "node.go",
        "roles.go",
        "validator.go",
    ],
    importpath = "github.com/Taranpreet26311/hive/simulators/eth2/common/clients",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//beacon/engine:go_default_library",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//common/hexutil:go_default_library",
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
        "@com_github_ethereum_go_ethereum//ethclient:go_default_library",
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
        "@com_github_ethereum_hive//hivesim:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//builder:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//chain_generators:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//config/consensus:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//spoofing/proxy:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//utils:go_default_library",
        "@com_github_golang_jwt_jwt_v4//:go_default_library",
        "@com_github_holiman_uint256//:go_default_library",
        "@com_github_protolambda_bls12_381_util//:go_default_library",
        "@com_github_protolambda_eth2api//:go_default_library",
        "@com_github_protolambda_eth2api//client/beaconapi:go_default_library",
        "@com_github_protolambda_eth2api//client/debugapi:go_default_library",
        "@com_github_protolambda_eth2api//client/nodeapi:go_default_library",
        "@com_github_protolambda_zrnt//eth2/beacon/altair:go_default_library",
        "@com_github_protolambda_zrnt//eth2/beacon/bellatrix:go_default_library",
        "@com_github_protolambda_zrnt//eth2/beacon/capella:go_default_library",
        "@com_github_protolambda_zrnt//eth2/beacon/common:go_default_library",
        "@com_github_protolambda_zrnt//eth2/beacon/phase0:go_default_library",
        "@com_github_protolambda_ztyp//tree:go_default_library",
        "@com_github_rauljordan_engine_proxy//proxy:go_default_library",
        "@org_golang_x_exp//slices:go_default_library",
    ],
)
