load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "debug",
    srcs = ["debug.go"],
    importpath = "github.com/Taranpreet26311/hive/simulators/eth2/common/debug",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//clients:go_default_library",
        "@com_github_ethereum_hive_simulators_eth2_common//utils:go_default_library",
        "@com_github_protolambda_eth2api//:go_default_library",
        "@com_github_protolambda_zrnt//eth2/beacon/common:go_default_library",
        "@com_github_protolambda_ztyp//tree:go_default_library",
    ],
)
