load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = ["engine.go"],
    importpath = "github.com/Taranpreet26311/hive/simulators/ethereum/engine/client",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//beacon/engine:go_default_library",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//core:go_default_library",
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
        "@com_github_ethereum_hive//hivesim:go_default_library",
        "@com_github_ethereum_hive_simulators_ethereum_engine//client/types:go_default_library",
    ],
)
